syntax = "proto3";

package schema;
option go_package = "github.com/cloudnativedaysjp/cnd-operation-server/pkg/ws-proxy/schema";

import "google/protobuf/empty.proto";

service SceneService {
  rpc ListScene(ListSceneRequest) returns (ListSceneResponse) {}
  rpc MoveSceneToNext(MoveSceneToNextRequest) returns (google.protobuf.Empty) {}
}

message Scene {
  string name = 1;
  int32 sceneIndex = 2;
  bool is_current_program = 3;
}

message ListSceneRequest { int32 trackId = 1; }
message ListSceneResponse { repeated Scene scene = 1; }

message MoveSceneToNextRequest { int32 trackId = 1; }
